# VulScanner

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md
backend/: CMakeLists.txt
backend/include/: cvss_cache.h  nvd_api.h  pcap_sniffer.h  scanner.h
backend/src/: bindings.cpp  cvss_cache.cpp  main.cpp  nvd_api.cpp  pcap_sniffer.cpp  scanner_async.cpp
data/: vuln_db.json
frontend/: CMakeLists.txt
frontend/src/: mainwindow.cpp  mainwindow.h
packaging/: README.txt
scripts/: example_scan.lua
